<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="d1">Demo 1 - SIMPLEDIALOG</string>
    <string name="d2">DEMO 2 - BUTTON DIALOG</string>
    <string name="enter">Enter Some Text</string>
    <string name="d3">Demo 3 - TEXT INPUT DIALOG</string>
    <string name="number1">Enter Number 1:</string>
    <string name="number2">Enter Number 2:</string>
    <string name="exercise_3">EXERCISE 3</string>
    <string name="d4">Demo 4 - DATEPICKER DIALOG</string>
    <string name="d5">Demo 5 - TIMEPICKER DIALOG</string>
</resources>
